# MolGenDocking

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE.md  NOTICE  Readme.md  SAIR_repo_tars.json  constraints.txt  constraints_github_action.txt  data_instruct.py  debug_properties.csv  docker_environment.yml  grpo.py  grpo_dataset.py  grpo_rewards.py  index.html  main.py  mol_rewards.py  molecular_properties.py  objects.inv  pyproject.toml  run_docker_test.sh  setup.py  sft.py  sft_data.py  sitemap.xml
.github/workflows/: docs.yml  python-package-conda.yml  test_docker_image.yml  test_pip_installation.yml  tests.yml
api/toc/: index.html
data/: fragments.json  upload_data.ipynb
docker/: Dockerfile  environment.yml  run_docker_test.sh
docs/: mkdocs.yml
mol_gen_docking/: analyze_completions.py  compute_properties_ZINC.py  create_opt_dataset.py  create_reasonning_dataset.py  create_rl_dataset.py  extract_SIU_targets.py  extract_pockets.py  fast_api_reward_server.py  grpo.py  grpo_dataset.py  grpo_rewards.py  grpo_trainer.py  logger.py  molecular_properties.py  orz_mol.py  parser.py  property_server.py  register_hf_model.ipynb  resize_model.py  save_model.py  score_completions.py  server.py  sft.py  sft_data.py  sft_trainer.py  trainer_base.py
notebooks/: MolGenOutput.ipynb  Polaris.ipynb  SAIR.ipynb  SAIR_data.ipynb  SAIR_pocket.ipynb  anolg_test_constructions.ipynb  compare_docking.ipynb  create_sft_dataset.ipynb  dataset_analysis.ipynb  gen_dataset_analysis.ipynb  molprop_dataset_analysis.ipynb  pocket.ipynb  pocket_siu_viz.ipynb  reaction_dataset_analysis.ipynb  reaction_dataset_creation_comparison.ipynb  utils.py  zinc_props.ipynb
search/: search_index.json
slurm/: SAIR-identify-pockets.sh  compute_ZINC_df.sh  meeko_preprocess.sh  openrlhf_mol-1.7B.sh  openrlhf_mol-4B-multimodal.sh  openrlhf_mol-4B-toolcalls.sh  openrlhf_mol-4B.sh  openrlhf_mol.sh  orz_mol.sh  run_all_compute_ZINC  sft_Qwen-4B.sh  tests.sh
slurm_script/: grpo.sh
system_prompts/: ministral.json  thinking_qwen_like.json  thinking_qwen_like_polaris.json  vanilla.json  vanilla_polaris.json
test/: conftest.py  test_dockgen.py  test_dockgen_models.py  test_dockgen_processor.py  test_docking.csv  test_grpo_dataset.py  test_grpo_rewards.py  test_molecular_properties.py  test_prompt_generator.py  test_rl_dataset.py  test_rl_rewards.py  test_server_reward.py  test_sft.py  test_sft_dataset.py  utils.py
(+290 files in other folders)
