[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mol_gen_docking"
version = "2025.8.4"
dependencies = [
    "torch>=2.6.0",
    "datasets",
    "ray",
    "selfies",
    "fastapi",
    "PyTDC==1.1.14",
    "pytest",
    "hydra-core",
    "pyscreener",
    "meeko",
    "scikit-learn==1.2.2",
    "biopython"
]

requires-python = ">=3.10"
description = ""

[tool.mypy]
disable_error_code = ["type-arg"]

[project.entry-points."vllm.general_plugins"]
register_dummy_model = "mol_gen_docking.models.vllm_model.register:register"
