[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mol_gen_docking"
version = "2025.8.4"
dependencies = [
    "torch>=2.6.0",
    "datasets",
    "ray>=2.49.1",
    "pydantic",
    "pydantic_settings",
    "selfies",
    "fastapi",
    "PyTDC==1.1.14",
    "rdkit",
    "pytest",
    "hydra-core",
    "pyscreener",
    "meeko==0.6.1",
    "scikit-learn==1.2.2",
    "ringtail",
    "prody",
    "biopython",
    "uvicorn",
    "pydantic",
    "pydantic-settings"
]

requires-python = ">=3.10"
description = ""


[project.optional-dependencies]
model = [
    "vllm==0.10.1.1"
]

[tool.mypy]
disable_error_code = ["type-arg"]

[project.entry-points."vllm.general_plugins"]
register_dummy_model = "mol_gen_docking.models.vllm_model.register:register"

[tool.hatch.build.targets.wheel]
    packages = ["src/mol_gen_docking"]
